--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
 <head>
   <script data-ionic="inject">
-    (function(w){var i=w.Ionic=w.Ionic||{};i.version='3.7.1';i.angular='4.4.3';i.staticDir='build/';})(window);
+    (function(w){var i=w.Ionic=w.Ionic||{};i.version='3.9.2';i.angular='5.0.3';i.staticDir='build/';})(window);
   </script>
   <meta charset="UTF-8">
   <title>Ionic App</title>
@@ -18,9 +18,8 @@
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
 
-  <!-- cordova.js required for cordova apps -->
+  <!-- cordova.js required for cordova apps (remove if not needed) -->
   <script src="cordova.js"></script>
-
 
   <!-- un-comment this code to enable service worker
   <script>
@@ -39,7 +38,6 @@
   <!-- Ionic's root component and where the app will load -->
   <ion-app></ion-app>
 
-
   <!-- The polyfills js is generated during the build process -->
   <script src="build/polyfills.js"></script>
 
@@ -49,9 +47,6 @@
 
   <!-- The main bundle js is generated during the build process -->
   <script src="build/main.js"></script>
-
-  
-
 
 </body>
 </html>
